--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Main Repo: https://github.com/RaihanStark/fullstack-open",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/RaihanStark/fullstack-open-part3#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
