--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "homepage": "https://github.com/RaihanStark/fullstack-open-part3#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "mongoose": "^6.1.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
